push test lennert

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # EDIT VAN BENJAMIN OM TE KIJKEN OF HET LUKT :P
+# ja da werkt inderdaad XD
 # Created by https://www.toptal.com/developers/gitignore/api/python,vscode,intellij+all,r,pycharm+all,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,vscode,intellij+all,r,pycharm+all,jupyternotebooks
 
