--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,5 @@ vignettes/*.pdf
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,vscode,intellij+all,r,pycharm+all,jupyternotebooks
+
+### Export Folder ###
