--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,4 @@ vignettes/*.pdf
 # End of https://www.toptal.com/developers/gitignore/api/python,vscode,intellij+all,r,pycharm+all,jupyternotebooks
 
 ### Export Folder ###
+export
